# hunter

./: .travis.yml  appveyor.yml  jenkins.py
cmake/configs/: default.cmake
cmake/modules/: hunter_autotools_configure_command.cmake
cmake/projects/Catch/: hunter.cmake
cmake/projects/cotire/: hunter.cmake
cmake/projects/sqlite3/: hunter.cmake
examples/cotire/: CMakeLists.txt
examples/sqlite3/: CMakeLists.txt
